# WikiMapper

./: .gitignore  CMakeLists.txt  ProgressLog.md  README.md  conanfile.py  data.wiki  progressLog.md  vcpkg.json
assets/: benchmarkCameraTrack  benchmarkTimestamps
db/: docker-compose.yaml
dbLoader/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
dbLoader/src/: main.cpp  progress.cpp  saxparser.cpp  saxparser.h  saxparser.hpp
explorer/: CMakeLists.txt  README.md  sphere512.DDS  vcpkg.json
explorer/lib/: bolt.cpp  camera.cpp  camera.h  camera.hpp  controls.cpp  controls.hpp  rgb_hsv.cpp  rgb_hsv.hpp  shader.cpp  shader.h  shader.hpp  skybox.cpp  skybox.hpp  text2D.cpp  text2D.h  texture.cpp  texture.h  texture.hpp
explorer/shaders/: bloomFinal.frag  blur.frag  cylinder.frag  cylinder.geom  cylinder.vert  fragment_shader.glsl  framebuffer.vert  framebufferblur.frag  framebuffermixer.frag  label.frag  label.geom  label.vert  lightshader.vert  line.frag  line.geom  line.vert  lineFragmentShader.glsl  lineVertexShader.glsl  nodeFragmentShader.glsl  nodeVertexShader.glsl  shader.frag  shader.vert  skybox.frag  sphere.frag  sphere.geom  sphere.vert  text.frag  text.vert  textFragmentShader.glsl  textVertexShader.glsl
explorer/src/: debugSim.hpp  graph.cpp  graph.h  graph.hpp  gui.cpp  gui.h  main.cpp  neo4j.cpp  neo4j.h  old_main.cpp  old_main.cppx  pointMaths.cpp  pointMaths.h  pointMaths.hpp  simulation.cpp  store.cpp  store.h  store.hpp  text.cpp  text.h
explorer/src/visual/: camera.cpp  camera.hpp  engine.cpp  engine.hpp  filter.cpp  filter.hpp  gui.c  gui.cpp  gui.cppx  gui.h  gui.hpp  label.cpp  label.hpp  main.cpp  shader.cpp  shader.hpp  skybox.cpp  skybox.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  uniformBufferObject.hpp
lib/: CMakeLists.txt  TSQueue.cpp  TSQueue.h  mutex_guarded.hpp  rgb_hsv.cpp
lib/ImSearch/: imsearch.cpp  imsearch.hpp  imsearch_internal.hpp
lib/libxml++-5.2.0/: ChangeLog
lib/libxml++-5.2.0/untracked/docs/manual/: libxml++.xml
lib/libxml++-5.2.0/untracked/docs/manual/html/: chapter-introduction.html  chapter-parsers.html  index.html  sect-comp-link.html  sect-reader-parser.html  sect-sax-parser.html  sect-utf8.html
lib/libxml++-5.2.0/untracked/docs/reference/: libxml++-5.0.devhelp2  libxml++-5.0.tag
lib/libxml++-5.2.0/untracked/docs/reference/html/: annotated.html  classes.html  classhash__load__check__resize__trigger__size__base.html  classhash__load__check__resize__trigger__size__base__inherit__graph.map  classhash__load__check__resize__trigger__size__base__inherit__graph.md5  classlu__counter__policy__base.html  classlu__counter__policy__base__inherit__graph.map  classlu__counter__policy__base__inherit__graph.md5  classmask__based__range__hashing.html  classmask__based__range__hashing__inherit__graph.map  classmask__based__range__hashing__inherit__graph.md5  classmod__based__range__hashing.html  classmod__based__range__hashing__inherit__graph.map  classmod__based__range__hashing__inherit__graph.md5  classxmlpp_1_1Attribute-members.html  classxmlpp_1_1Attribute.html  classxmlpp_1_1AttributeDeclaration-members.html  (+239 more)
lib/libxml2-2.9.14/: HTMLparser.lo  HTMLtree.lo  Makefile  Makefile.in  SAX.lo  SAX2.lo  buf.lo  c14n.lo  chvalid.lo  config.h  config.status  configure  debugXML.lo  dict.lo  encoding.lo  entities.lo  globals.lo  hash.lo  legacy.lo  libtool  libxml-2.0-uninstalled.pc  libxml-2.0.pc  libxml2.la  libxml2.spec  list.lo  nanoftp.lo  nanohttp.lo  parserInternals.lo  pattern.lo  relaxng.lo  schematron.lo  testdso.la  testdso.lo  threads.lo  uri.lo  valid.lo  xinclude.lo  xlink.lo  xml2-config  xml2Conf.sh  (+16 more)
lib/libxml2-2.9.14/.deps/: HTMLparser.Plo  HTMLtree.Plo  SAX.Plo  SAX2.Plo  buf.Plo  c14n.Plo  catalog.Plo  chvalid.Plo  debugXML.Plo  dict.Plo  encoding.Plo  entities.Plo  error.Plo  globals.Plo  hash.Plo  legacy.Plo  list.Plo  nanoftp.Plo  nanohttp.Plo  parser.Plo  parserInternals.Plo  pattern.Plo  relaxng.Plo  schematron.Plo  testdso.Plo  threads.Plo  tree.Plo  uri.Plo  valid.Plo  xinclude.Plo  xlink.Plo  xmlIO.Plo  xmlcatalog.Po  xmllint.Po  xmlmemory.Plo  xmlmodule.Plo  xmlreader.Plo  xmlregexp.Plo  xmlsave.Plo  xmlschemas.Plo  (+7 more)
lib/libxml2-2.9.14/.libs/: libxml2.lai  testdso.lai  xmlcatalog  xmllint
lib/libxml2-2.9.14/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
lib/libxml2-2.9.14/doc/: Makefile  Makefile.in
lib/libxml2-2.9.14/doc/devhelp/: Makefile  Makefile.in
lib/libxml2-2.9.14/doc/examples/: Makefile  Makefile.in
lib/libxml2-2.9.14/example/: Makefile  Makefile.in
lib/libxml2-2.9.14/fuzz/: Makefile  Makefile.in
lib/libxml2-2.9.14/include/: Makefile  Makefile.in
lib/libxml2-2.9.14/include/libxml/: Makefile  Makefile.in
lib/libxml2-2.9.14/python/: Makefile  Makefile.in  libxml.lo  libxml2-py.lo  libxml2mod.la
lib/libxml2-2.9.14/python/.deps/: libxml.Plo  libxml2-py.Plo  types.Plo
lib/libxml2-2.9.14/python/.libs/: libxml2mod.lai
lib/libxml2-2.9.14/python/tests/: Makefile  Makefile.in
lib/libxml2-2.9.14/xstc/: Makefile  Makefile.in
server/: go.mod  main.go  neo4j-server.service  setup.sh  wikimapper-server.service
shaders/: bloomBlur.frag  bloomComposite.frag  bloomExtract.frag  cylinder.frag  cylinder.geom  framebufferblur.frag  label.frag  label.geom  label.vert  selector.frag  selector.geom  selector.vert  skybox.vert  sphere.frag  sphere.geom  sphere.vert  text.frag  text.vert
src/: application.cpp  application.hpp  controlData.cpp  controlData.hpp  controlPlane.cpp  controlPlane.hpp  debugSim.hpp  example.xml  graph.cpp  graph.hpp  graphLoader.cpp  interface.cpp  interface.hpp  logger.hpp  main.cpp  myparser.cpp  myparser.h  pointMaths.cpp  progress.cpp  progress.h  saxparser.cpp  saxparser.h  simulation.cpp  simulation.hpp  store.cpp  store.hpp
src/visual/: bloom.cpp  bloom.hpp  camera.cpp  camera.hpp  engine.cpp  engine.hpp  filter.cpp  filter.hpp  gui.cpp  gui.hpp  label.cpp  label.hpp  selector.cpp  selector.hpp  shader.cpp  shader.hpp  skybox.cpp  skybox.hpp  text.hpp  texture.cpp  texture.hpp  uniformBufferObject.hpp
